--- a/peta.html
+++ b/peta.html
@@ -221,25 +221,61 @@
   return out;
 }
 
-function buildInfoHtml(p){
-  // prefer nilai ter-normalisasi dari objek p
-  const nama = p.Nama_Infrastruktur || p.nama || p.name || '';
-  const sektor = p.Sektor || p.sektor || p.sector || '';
-  const jenis = p.Jenis_Kegiatan || p.jenis || p['Jenis Kegiatan'] || '';
-  const lokasi = p.Lokasi || p.Lokasi || p.alamat || p.address || '';
-  const wilayah = p.Wilayah || p.Wilayah || p.NAMOBJ || p.WADMKK || '';
-  const tahun = p.Tahun_Pembangunan || p.tahun || '';
-  const status = p.Status_Keberfungsian || p.status || '';
+function buildInfoHtml(props){
+  // normalisasi nilai kosong/placeholder
+  function clean(v){
+    if(v === null || v === undefined) return '';
+    const s = String(v).trim();
+    if(!s) return '';
+    const low = s.toLowerCase();
+    if(low === 'null' || low === 'undefined' || low === '-' ) return '';
+    return s;
+  }
+
+  // ambil nilai dari beberapa kandidat nama properti (case-insensitive)
+  function get(names){
+    for(const n of names){
+      if(props[n] !== undefined && props[n] !== null){
+        const v = clean(props[n]);
+        if(v) return v;
+      }
+    }
+    for(const key in props){
+      const lk = key.toLowerCase().replace(/\s+/g,'_');
+      for(const n of names){
+        if(lk === n.toLowerCase().replace(/\s+/g,'_')){
+          const v = clean(props[key]);
+          if(v) return v;
+        }
+      }
+    }
+    return '';
+  }
+
+  const nama   = get(['Nama_Infrastruktur','Nama Infrastruktur','nama_infrastruktur','nama','name']);
+  const sektor = get(['Sektor','sektor','sector']);
+  const jenis  = get(['Jenis_Kegiatan','Jenis Kegiatan','jenis','sub_kelas','subkelas']);
+  const lokasi = get(['Lokasi','lokasi','location','alamat','address','alamat_lengkap','place']);
+  const wilayah= get(['Wilayah','wilayah','WADMKK','NAMOBJ','kabupaten','kota','kec','nama_kab']);
+  const tahun  = get(['Tahun_Pembangunan','Tahun Bangun','tahun_bangun','tahun']);
+  const status = get(['Status_Keberfungsian','Status Keberfungsian','status','kondisi']);
 
   let html = '<div class="custom-iw">';
-  if(nama) html += '<div><strong>'+escapeHtml(String(nama))+'</strong></div>';
-  if(sektor) html += '<div>Sektor: '+escapeHtml(String(sektor))+'</div>';
-  if(jenis) html += '<div>Jenis Kegiatan: '+escapeHtml(String(jenis))+'</div>';
-  if(lokasi) html += '<div>Lokasi: '+escapeHtml(String(lokasi))+'</div>';
-  if(wilayah) html += '<div>Wilayah: '+escapeHtml(String(wilayah))+'</div>';
-  if(tahun) html += '<div>Tahun Bangun: '+escapeHtml(String(tahun))+'</div>';
-  if(status) html += '<div>Status: '+escapeHtml(String(status))+'</div>';
-  html += '</div>';
+  if(nama)   html += '<div><strong>'+escapeHtml(nama)+'</strong></div>';
+  if(sektor) html += '<div>Sektor: '+escapeHtml(sektor)+'</div>';
+  if(jenis)  html += '<div>Jenis Kegiatan: '+escapeHtml(jenis)+'</div>';
+  if(lokasi) html += '<div>Lokasi: '+escapeHtml(lokasi)+'</div>';
+  if(wilayah)html += '<div>Wilayah: '+escapeHtml(wilayah)+'</div>';
+  if(tahun)  html += '<div>Tahun Bangun: '+escapeHtml(tahun)+'</div>';
+  if(status) html += '<div>Status: '+escapeHtml(status)+'</div>';
+
+  // jika semua kosong, tampilkan fallback singkat agar IW tetap muncul
+  if(html === '<div class="custom-iw"></div>'){
+    html = '<div class="custom-iw"><div>Data atribut tidak tersedia</div></div>';
+  } else {
+    html += '</div>';
+  }
+
   return html;
 }
 
