--- a/peta.html
+++ b/peta.html
@@ -5,11 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Peta Infrastruktur - MalukuInfraZone</title>
   <link rel="icon" type="image/png" href="images/favicon.png">
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700;800&family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
-
   <style>
     :root{--bg:#071024;--muted:#a7b6c8;--accent:#3b82f6}
     html,body{height:100%;margin:0;font-family:"Poppins",system-ui,Segoe UI,Roboto,Arial;background:linear-gradient(180deg,var(--bg),#05060a);color:#fff}
@@ -32,10 +30,9 @@
     .custom-iw{font-size:13px;color:#021129;background:#fff;padding:8px;border-radius:6px;max-width:320px;text-align:left;line-height:1.4}
     .custom-iw>div{margin:0;padding:0}
     .site-footer{background:#050505;color:#d1d5db;padding:36px 20px;margin-top:20px;border-radius:8px;text-align:center}
-    .footer-inner{max-width:1200px;margin:0 auto;display:flex;gap:40px;justify-content:center;align-items:flex-start;flex-wrap:wrap;text-align:center}
     .goto-top{position:fixed;right:20px;bottom:28px;width:44px;height:44px;border-radius:22px;background:#111;color:#fff;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 6px 18px rgba(0,0,0,0.4)}
     .goto-top span{font-size:18px}
-    @media(max-width:900px){#map{height:65vh}.controls{flex-direction:column;align-items:flex-start}.footer-inner{gap:20px;justify-content:center}}
+    @media(max-width:900px){#map{height:65vh}.controls{flex-direction:column;align-items:flex-start}}
   </style>
 </head>
 <body>
@@ -90,26 +87,6 @@
         <div class="tag">BPBPK Maluku</div>
         <div class="footer-note">© 2025 Balai Penataan Bangunan, Prasarana dan Kawasan Maluku. Semua hak dilindungi.</div>
       </div>
-
-      <div class="footer-col">
-        <h4>Indonesia</h4>
-        <div>Jl. D. I. Panjaitan, Uritetu, Kec. Sirimau</div>
-        <div>Kota Ambon, Maluku</div>
-      </div>
-
-      <div class="footer-col">
-        <h4>Follow us</h4>
-        <nav aria-label="Sosial media">
-          <ul class="footer-links">
-            <li>
-              <a href="https://www.instagram.com/pu_ciptakarya_maluku" target="_blank" rel="noopener noreferrer" aria-label="Instagram BPBPK Maluku" style="display:inline-flex;align-items:center;gap:10px;color:inherit;text-decoration:none">
-                <img src="images/instagram.png" alt="" style="width:18px;height:18px;display:block;flex-shrink:0" />
-                <span>Instagram</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
     </div>
   </footer>
 
@@ -118,7 +95,7 @@
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 
   <script>
-    // Config
+    // config
     const RAW_GEOJSON = "https://raw.githubusercontent.com/bpbpkmaluku/Peta-Infrastruktur/main/data/DATA_SPASIAL.geojson";
     const ADMIN_PROV_URL = "data/maluku_prov.geojson";
     const ADMIN_KAB_URL  = "data/maluku_kabkota.geojson";
@@ -132,13 +109,17 @@
       "default": "images/icon-default.png"
     };
 
-    // State
+    // state
     let map, infoWindow, allMarkers = [], geoData = null;
     const uniqueSectors = new Set(), uniqueYears = new Set(), uniqueRegions = new Set();
 
-    // Utilities
+    // helpers
     function escapeHtml(s){ return String(s||'').replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'})[c]); }
     function setStatus(t){ document.getElementById('status').textContent = t || ''; }
+
+    function normalizeKey(k){
+      return String(k||'').trim().toLowerCase().replace(/\s+/g,'_').replace(/[^\w]/g,'');
+    }
 
     function normalizeRegion(s){
       if(!s) return '';
@@ -152,132 +133,116 @@
       return s.split(' ').map(w=>w.charAt(0).toUpperCase()+w.slice(1).toLowerCase()).join(' ');
     }
 
-   function normalizeProperties(props){
-  const out = {};
-  if(!props) return out;
-
-  // salin mentah
-  Object.keys(props).forEach(k => { out[k] = props[k]; });
-
-  function normal(v){
-    if(v === null || v === undefined) return '';
-    const s = String(v).trim();
-    if(s === '' ) return '';
-    const low = s.toLowerCase();
-    if(low === 'null' || low === 'undefined' || low === '-' ) return '';
-    return s;
-  }
-
-  function getVal(names){
-    // cek nama exact first
-    for(const n of names){
-      if(props[n] !== undefined && props[n] !== null){
-        const v = normal(props[n]);
-        if(v) return v;
-      }
+    function cleanVal(v){
+      if(v === null || v === undefined) return '';
+      const s = String(v).trim();
+      if(!s) return '';
+      const low = s.toLowerCase();
+      if(['null','undefined','-','n/a','na','none'].includes(low)) return '';
+      return s;
     }
-    // cek case-insensitive / whitespace-insensitive keys
-    for(const key in props){
-      const lk = key.toLowerCase().replace(/\s+/g,'_');
-      for(const n of names){
-        if(lk === n.toLowerCase().replace(/\s+/g,'_')){
-          const v = normal(props[key]);
-          if(v) return v;
+
+    // strong normalizeProperties with robust key mapping
+    function normalizeProperties(props){
+      const out = {};
+      if(!props) return out;
+
+      // build map from normalizedKey -> originalKey
+      const keyMap = {};
+      Object.keys(props).forEach(k=>{
+        const nk = normalizeKey(k);
+        keyMap[nk] = k;
+      });
+
+      function getVal(names){
+        // try exact candidate name
+        for(const name of names){
+          const nk = normalizeKey(name);
+          if(keyMap[nk]){
+            const v = cleanVal(props[keyMap[nk]]);
+            if(v) return v;
+          }
         }
-      }
-    }
-    return '';
-  }
-
-  out.Sektor = getVal(['Sektor','sektor','sector']);
-  out.Nama_Infrastruktur = getVal(['Nama Infrastruktur','nama_infrastruktur','nama','name']);
-  out.Jenis_Kegiatan = getVal(['Jenis Kegiatan','jenis_kegiatan','jenis','sub_kelas','subkelas']);
-  out.Lokasi = getVal(['Lokasi','lokasi','location','alamat','address','alamat_lengkap']);
-  out.Wilayah = getVal(['Wilayah','wilayah','WADMKK','NAMOBJ','kabupaten','kota','kec']);
-  out.Tahun_Pembangunan = getVal(['Tahun Pembangunan','tahun_bangun','tahun']);
-  out.Status_Keberfungsian = getVal(['Status Keberfungsian','status_keberfungsian','status','kondisi']);
-
-  // fallback: jika field normalized kosong, coba ambil beberapa kandidat mentah (untuk kasus nama kolom tak standar)
-  if(!out.Lokasi){
-    const alt = getVal(['Alamat','alamat_lengkap','address_detail','place']);
-    if(alt) out.Lokasi = alt;
-  }
-  if(!out.Wilayah){
-    const altw = getVal(['WADMK','WADMKK','NAMOBJ','nama_kab','kabupaten_kota','district']);
-    if(altw) out.Wilayah = altw;
-  }
-
-  out.Wilayah = normalizeRegion(out.Wilayah || '');
-
-  // normalisasi status sederhana
-  const raw = (out.Status_Keberfungsian || '').normalize('NFKC').replace(/\u00A0/g,' ').trim();
-  const s = raw.toLowerCase();
-  if(/^(berfungsi|baik|operasional)$/.test(s)) out.Status_Keberfungsian = 'Berfungsi';
-  else if(/^(belum\s*berfungsi|belum|perencanaan|rencana|planned|prepared)$/.test(s)) out.Status_Keberfungsian = 'Belum Berfungsi';
-  else if(/(tidak\s*berfungsi|tidakberfungsi|rusak|mati|off|non[\-\s]?operasional)/.test(s)) out.Status_Keberfungsian = 'Tidak Berfungsi';
-  else if(/(tidak\s*diketahui|unknown)/.test(s)) out.Status_Keberfungsian = 'Tidak Diketahui';
-  else out.Status_Keberfungsian = raw || '';
-
-  return out;
-}
-
-function buildInfoHtml(props){
-  // normalisasi nilai kosong/placeholder
-  function clean(v){
-    if(v === null || v === undefined) return '';
-    const s = String(v).trim();
-    if(!s) return '';
-    const low = s.toLowerCase();
-    if(low === 'null' || low === 'undefined' || low === '-' ) return '';
-    return s;
-  }
-
-  // ambil nilai dari beberapa kandidat nama properti (case-insensitive)
-  function get(names){
-    for(const n of names){
-      if(props[n] !== undefined && props[n] !== null){
-        const v = clean(props[n]);
-        if(v) return v;
-      }
-    }
-    for(const key in props){
-      const lk = key.toLowerCase().replace(/\s+/g,'_');
-      for(const n of names){
-        if(lk === n.toLowerCase().replace(/\s+/g,'_')){
-          const v = clean(props[key]);
-          if(v) return v;
+        // try fuzzy: find a key that contains candidate or candidate contains key
+        for(const name of names){
+          const nk = normalizeKey(name);
+          for(const nk2 in keyMap){
+            if(nk2.includes(nk) || nk.includes(nk2)){
+              const v = cleanVal(props[keyMap[nk2]]);
+              if(v) return v;
+            }
+          }
         }
+        // try any key that looks like the candidate words present
+        for(const nk2 in keyMap){
+          const orig = keyMap[nk2];
+          const v = cleanVal(props[orig]);
+          if(v){
+            // prefer keys with words like 'lokasi','wilayah','kab','kota','alamat'
+            const hint = nk2;
+            for(const name of names){
+              const hintName = normalizeKey(name);
+              if(hint.includes(hintName) || hintName.includes(hint)) return v;
+            }
+          }
+        }
+        return '';
       }
+
+      out.Sektor = getVal(['Sektor','sektor','sector']);
+      out.Nama_Infrastruktur = getVal(['Nama Infrastruktur','nama_infrastruktur','nama','name']);
+      out.Jenis_Kegiatan = getVal(['Jenis Kegiatan','jenis_kegiatan','jenis','sub_kelas','subkelas']);
+      out.Lokasi = getVal(['Lokasi','lokasi','location','alamat','address','alamat_lengkap','alamat_lokasi','place']);
+      out.Wilayah = getVal(['Wilayah','wilayah','WADMKK','NAMOBJ','kabupaten','kota','kec','nama_kab','kab_kota']);
+      out.Tahun_Pembangunan = getVal(['Tahun Pembangunan','tahun_bangun','tahun']);
+      out.Status_Keberfungsian = getVal(['Status Keberfungsian','status_keberfungsian','status','kondisi']);
+
+      // fallback attempts for lokasi and wilayah using common alternate fields
+      if(!out.Lokasi){
+        out.Lokasi = getVal(['Alamat','alamat_lengkap','address_detail','place_name']);
+      }
+      if(!out.Wilayah){
+        out.Wilayah = getVal(['district','regency','kabupaten_kota','nama_kab']);
+      }
+
+      out.Wilayah = normalizeRegion(out.Wilayah || '');
+
+      // normalize status values
+      const raw = (out.Status_Keberfungsian || '').normalize('NFKC').replace(/\u00A0/g,' ').trim();
+      const s = raw.toLowerCase();
+      if(/^(berfungsi|baik|operasional)$/.test(s)) out.Status_Keberfungsian = 'Berfungsi';
+      else if(/^(belum\s*berfungsi|belum|perencanaan|rencana|planned|prepared)$/.test(s)) out.Status_Keberfungsian = 'Belum Berfungsi';
+      else if(/(tidak\s*berfungsi|tidakberfungsi|rusak|mati|off|non[\-\s]?operasional)/.test(s)) out.Status_Keberfungsian = 'Tidak Berfungsi';
+      else if(/(tidak\s*diketahui|unknown)/.test(s)) out.Status_Keberfungsian = 'Tidak Diketahui';
+      else out.Status_Keberfungsian = raw || '';
+
+      return out;
     }
-    return '';
-  }
 
-  const nama   = get(['Nama_Infrastruktur','Nama Infrastruktur','nama_infrastruktur','nama','name']);
-  const sektor = get(['Sektor','sektor','sector']);
-  const jenis  = get(['Jenis_Kegiatan','Jenis Kegiatan','jenis','sub_kelas','subkelas']);
-  const lokasi = get(['Lokasi','lokasi','location','alamat','address','alamat_lengkap','place']);
-  const wilayah= get(['Wilayah','wilayah','WADMKK','NAMOBJ','kabupaten','kota','kec','nama_kab']);
-  const tahun  = get(['Tahun_Pembangunan','Tahun Bangun','tahun_bangun','tahun']);
-  const status = get(['Status_Keberfungsian','Status Keberfungsian','status','kondisi']);
+    // robust info window builder
+    function buildInfoHtml(p){
+      const nama = cleanVal(p.Nama_Infrastruktur || p.nama || p.name || '');
+      const sektor = cleanVal(p.Sektor || p.sektor || '');
+      const jenis = cleanVal(p.Jenis_Kegiatan || p.jenis || '');
+      const lokasi = cleanVal(p.Lokasi || p.alamat || p.address || '');
+      const wilayah = cleanVal(p.Wilayah || p.NAMOBJ || p.WADMKK || '');
+      const tahun = cleanVal(p.Tahun_Pembangunan || p.tahun || '');
+      const status = cleanVal(p.Status_Keberfungsian || p.status || '');
 
-  let html = '<div class="custom-iw">';
-  if(nama)   html += '<div><strong>'+escapeHtml(nama)+'</strong></div>';
-  if(sektor) html += '<div>Sektor: '+escapeHtml(sektor)+'</div>';
-  if(jenis)  html += '<div>Jenis Kegiatan: '+escapeHtml(jenis)+'</div>';
-  if(lokasi) html += '<div>Lokasi: '+escapeHtml(lokasi)+'</div>';
-  if(wilayah)html += '<div>Wilayah: '+escapeHtml(wilayah)+'</div>';
-  if(tahun)  html += '<div>Tahun Bangun: '+escapeHtml(tahun)+'</div>';
-  if(status) html += '<div>Status: '+escapeHtml(status)+'</div>';
+      let html = '<div class="custom-iw">';
+      if(nama) html += '<div><strong>' + escapeHtml(nama) + '</strong></div>';
+      if(sektor) html += '<div>Sektor: ' + escapeHtml(sektor) + '</div>';
+      if(jenis) html += '<div>Jenis Kegiatan: ' + escapeHtml(jenis) + '</div>';
+      if(lokasi) html += '<div>Lokasi: ' + escapeHtml(lokasi) + '</div>';
+      if(wilayah) html += '<div>Wilayah: ' + escapeHtml(wilayah) + '</div>';
+      if(tahun) html += '<div>Tahun Bangun: ' + escapeHtml(tahun) + '</div>';
+      if(status) html += '<div>Status: ' + escapeHtml(status) + '</div>';
+      html += '</div>';
 
-  // jika semua kosong, tampilkan fallback singkat agar IW tetap muncul
-  if(html === '<div class="custom-iw"></div>'){
-    html = '<div class="custom-iw"><div>Data atribut tidak tersedia</div></div>';
-  } else {
-    html += '</div>';
-  }
-
-  return html;
-}
+      // ensure IW always shows something
+      if(html === '<div class="custom-iw"></div>') html = '<div class="custom-iw"><div>Data atribut tidak tersedia</div></div>';
+      return html;
+    }
 
     function clearMarkers(){ allMarkers.forEach(x=>x.marker.setMap(null)); allMarkers = []; }
 
@@ -287,7 +252,9 @@ function buildInfoHtml(props){
       const bounds = new google.maps.LatLngBounds();
 
       geo.features.forEach(f=>{
-        if(!f.geometry || f.geometry.type !== 'Point') return;
+        if(!f.geometry) return;
+        // accept Point or geometry with coordinates array (some CSV->GeoJSON produce x,y fields)
+        if(f.geometry.type !== 'Point') return;
         const c = f.geometry.coordinates;
         if(!Array.isArray(c) || c.length < 2) return;
         const lng = Number(c[0]), lat = Number(c[1]);
@@ -307,7 +274,7 @@ function buildInfoHtml(props){
         const marker = new google.maps.Marker({
           position: {lat, lng},
           map,
-          title: props.Nama_Infrastruktur || props.Nama || '',
+          title: props.Nama_Infrastruktur || props.nama || '',
           icon: { url: iconUrl, scaledSize: new google.maps.Size(36,36) }
         });
 
@@ -416,13 +383,13 @@ function buildInfoHtml(props){
       return await r.json();
     }
 
+    // CSV fallback loader
     function csvTextToGeoJSON(text, delimiter=','){
       const parsed = Papa.parse(text, {delimiter: delimiter, header: true, skipEmptyLines: true});
       const features = parsed.data.map(row=>{
         const lon = Number((row.Longitude||row.lon||row.Long||row.X||row.x||'').toString().trim());
         const lat = Number((row.Latitude||row.lat||row.Y||row.y||'').toString().trim());
         const props = Object.assign({}, row);
-        delete props.Longitude; delete props.Latitude; delete props.lon; delete props.lat; delete props.X; delete props.Y;
         if(!isFinite(lat) || !isFinite(lon)) return null;
         return { type: "Feature", geometry: { type: "Point", coordinates: [lon, lat] }, properties: props };
       }).filter(Boolean);
@@ -436,7 +403,7 @@ function buildInfoHtml(props){
       const ct = r.headers.get('content-type') || '';
       const text = await r.text();
       if(ct.includes('application/json') || text.trim().startsWith('{') || text.trim().startsWith('[')){
-        try { return JSON.parse(text); } catch(e){}
+        try { return JSON.parse(text); } catch(e){ /* fallthrough */ }
       }
       const semCount = (text.match(/;/g)||[]).length;
       const commaCount = (text.match(/,/g)||[]).length;
@@ -468,7 +435,6 @@ function buildInfoHtml(props){
     async function initMap(){
       map = new google.maps.Map(document.getElementById('map'), { center:{lat:-3.3,lng:129.1}, zoom:7, mapTypeControl:false, streetViewControl:false });
       infoWindow = new google.maps.InfoWindow({ maxWidth:320, pixelOffset: new google.maps.Size(0, -25) });
-
       document.getElementById('applyBtn').addEventListener('click', applyFilter);
       document.getElementById('resetBtn').addEventListener('click', resetFilter);
 
@@ -490,13 +456,13 @@ function buildInfoHtml(props){
       attachAdminInteractions();
     }
 
-    // UI helpers
-    const goto = document.getElementById('gotoTop');
-    goto.addEventListener('click', ()=>window.scrollTo({top:0,behavior:'smooth'}));
-    window.addEventListener('scroll', ()=>{ goto.style.display = window.scrollY>200 ? 'flex' : 'none'; });
-    goto.style.display = 'none';
+    // UI: goto top
+    const goto=document.getElementById('gotoTop');
+    goto.addEventListener('click',()=>window.scrollTo({top:0,behavior:'smooth'}));
+    window.addEventListener('scroll',()=>{ goto.style.display = window.scrollY>200 ? 'flex' : 'none'; });
+    goto.style.display='none';
 
-    // Load Google Maps then init
+    // Google Maps loader and init
     function loadGoogleMapsThenInit(apiKey){
       if(window.google && google.maps && typeof initMap === 'function'){ try{ initMap(); }catch(e){ console.error(e); } return; }
       const s = document.createElement('script');
@@ -506,7 +472,6 @@ function buildInfoHtml(props){
       document.head.appendChild(s);
     }
 
-    // Replace API key if needed
     loadGoogleMapsThenInit('AIzaSyBEZqcze-RGCcRGIBjyEt0-ID99TCDJeS0');
     window.initMap = initMap;
   </script>
